# PRPilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  FINAL_VERIFICATION.md  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  verify_foundry.py  verify_github.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  deps.py  handlers.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analysis_runs.py  (+6 more)
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  lifespan.py  types.py
backend/app/integrations/github/: __init__.py  auth.py  client.py  exceptions.py  mappers.py  services.py  webhooks.py
backend/app/models/: __init__.py  analysis.py  base.py  enums.py  pull_request.py  repository.py
backend/app/repositories/: __init__.py  analysis.py  base.py  pull_request.py  repository.py
backend/app/schemas/: __init__.py  analysis.py  dashboard.py  errors.py  intelligence.py  pull_request.py  repository.py
backend/app/services/: __init__.py  analysis_engine.py  analysis_service.py  dashboard_service.py  foundry_iq.py  pr_analysis.py  repo_sync.py
backend/migrations/: env.py
backend/migrations/versions/: 21c0859dfd55_add_risk_level_and_findings_to_analysis.py  92fd9de450a7_create_core_domain_tables.py  b29c2731f70f_validation_check.py
backend/tests/: .gitkeep  test_analysis_api.py  test_analysis_engine.py  test_analysis_service.py  test_api.py  test_dashboard.py  test_intelligence.py  test_sync.py  test_webhooks.py
(+66 files in other folders)
