[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prpilot-backend"
version = "0.1.0"
description = "PRPilot backend services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern python updates)
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
